feat: address search using google places api

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
 
 <body>
   <app-root></app-root>
+  <script async
+          src="https://maps.googleapis.com/maps/api/js?key=${API_KEY}&libraries=places">
+  </script>
 </body>
 
 </html>
