fix: updated api key

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 <body>
   <app-root></app-root>
   <script async
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA54mNVEKmr1YcjtgUrje7f5Ii8Dhrtq3Q&libraries=places">
+          src="https://maps.googleapis.com/maps/api/js?key=${API_KEY}&libraries=places">
   </script>
 </body>
 
